# IPCameraQualityAnalyzer

./: ---CMakeLists.txt  .gitignore  ARCHITECTURE.md  CMakeLists.txt  IPCameraQualityAnalyzer.pro  README.md  README_DEBIAN.md  USER_MANUAL.md  install_debian.sh
src/: cameraworker.cpp  cameraworker.h  imagequalityanalyzer.cpp  imagequalityanalyzer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
